# sql-server-omop-cdm-etl

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  dagster-daemon.service  dagster-webserver.service  dagster.yaml  docker-compose.yaml  pyproject.toml  start.sh  workspace.yaml
auth/dynamic/: dagster.yaml
libs/shared/: pyproject.toml
libs/shared/src/shared/loaders/: csv.py
libs/shared/src/shared/resources/: dwh.py  s3.py
libs/shared/src/shared/sensors/: run_status.py
omop-cdm/: .env.example  pyproject.toml
omop-cdm/data/: sample_condition_events.csv
omop-cdm/data/vocabulary/: CONCEPT.csv
omop-cdm/dbt/: .dbtignore  .sqlfluff  .sqlfluffignore  column_metadata.yaml  dbt_project.yml  omop_metadata.yaml
omop-cdm/dbt/macros/: add_identity_column.sql  create_columnstore.sql  create_index.sql  create_primary_key.sql  create_relation_for_insert_by_period.sql  drop_all_indexes.sql  drop_all_model_relations.sql  filter_by_year.sql  get_period_boundaries.sql  get_period_sql.sql  get_rows_inserted.sql  insert_by_period_materialization.sql  limit_rows.sql
omop-cdm/dbt/models/: sources.yml
omop-cdm/dbt/models/template/omop/: condition_occurrence.sql  person.sql
omop-cdm/dbt/models/template/staging/: stg_source_events.sql
omop-cdm/src/omop_cdm/: definitions.py  email_recipients.yaml  jobs.py  resources.py  sensors.py
omop-cdm/src/omop_cdm/assets/: data_quality.py  dbt.py  export.py  sample_seed.py  vocabulary_seed.py
