[project]
name = "dagster-najs"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    # dagster
    "dagster>=1.12.13",
    "dagster-dbt>=0.28.13",
    "dagster-docker>=0.28.13",
    "dagster-dlt>=0.28.11",
    "dagster-postgres>=0.28.13",
    "dagster-webserver>=1.12.13",
    # dbt
    "dbt-sqlserver>=1.9.0",
    # data / io
    "boto3>=1.42.46",
    "dlt[s3]>=1.21.0",
    "exchangelib>=5.6.0",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.3",
    "s3fs>=2026.1.0",
    "smart-open>=7.5.0",
    "xlsxwriter>=3.2.9",
    # ai
    "pydantic-ai>=1.51.0",
    # utils
    "psutil>=7.2.1",
    # local
    "shared",
]

[tool.uv.sources]
shared = { path = "libs/shared", editable = true }

[tool.uv.workspace]
members = [
    "dbt-dzzc",
]
