[project]
name = "omop-cdm"
requires-python = ">=3.10,<3.13"
version = "0.1.0"
dependencies = [
    "boto3>=1.42.30",
    "dagster>=1.12.13",
    "dagster-postgres>=0.28.13",
    "dagster-dbt>=0.28.13",
    "dagster-docker>=0.28.13",
    "dbt-sqlserver>=1.9.0",
    "exchangelib>=5.6.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "pydantic-ai>=1.51.0",
    "pyodbc>=4.0.35",
    "s3fs>=2026.1.0",
    "smart-open>=7.5.0",
    "shared",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[tool.uv.sources]
shared = { path = "../libs/shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "omop_cdm"
registry_modules = [
    "omop_cdm.components.*",
]




