[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "", email = "" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.42.46",
    "dagster>=1.12.13",
    "exchangelib>=5.6.0",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyodbc>=4.0.35",
    "s3fs>=2026.1.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
